$Id: ChangeLog,v 1.73 2004/06/07 16:50:02 haraldkipp Exp $

2004-06-07  Harald Kipp  <harald.kipp@egnite.de>

	* conf: Still incomplete configuration scripts added.

	* tools/nutconf: Working configuration tool replaced by very
	incomplete re-design. It will read the Lua scripts from the
	conf directory and display an editable tree of configuration
	items.


2004-06-07  Ole Reinhardt  <ole.reinhardt@kernelconcepts.de>
	* dev/sja1000.c, dev/can_dev.c
	  include/dev/sja1000.h, include/dev/can_dev.h
	
	Initial checkin of a driver and a simple api for can-bus devices.
	This driver is for the well known phillips sja1000 wich is connected
	to the Memory bus and an external interrupt.

2004-06-02  Ole Reinhardt  <ole.reinhardt@kernelconcepts.de>
	* os/semaphore.c
	Changed NutEventWait to NutEventWaitNext according to a hint 
	from Oliver

2004-06-02  Ole Reinhardt  <ole.reinhardt@kernelconcepts.de>
	* os/semaphore.c, include/sys/semaphore.h
	Fixed a integer overflow (underflow) in semaphore implementation
	Now a Semaphore initialized with 0 can not underrun any longer.

2004-05-26  Ole Reinhardt  <ole.reinhardt@kernelconcepts.de>
	* dev/cs8900.c
	Now compatible with newer AVRGCC versions. Reading of FrameLength
	and ReceiveStatus needs to be done high byte first.
	Added software wakeup and reset to init code (only available 
	for new code)

2004-06-07  Harald Kipp  <harald.kipp@egnite.de>

	* conf: Still incomplete configuration scripts added.

	* tools/nutconf: Working configuration tool replaced by very
	incomplete re-design. It will read the Lua scripts from the
	conf directory and display an editable tree of configuration
	items.


2004-05-24  Ole Reinhardt  <ole.reinhardt@kernelconcepts.de>

	* include/dev/hd44780_bus, dev/hd44780_bus
	New driver for memory mappen LCD displays. Take a look into
	hd44780_bus.c for detailed information about hardware design

	* include/dev/term.h, dev/term.h
	Small change to pass base address to LCD driver. 
