@@ -1,4 +1,9 @@
-$Id: ChangeLog,v 1.73 2004/06/07 16:50:02 haraldkipp Exp $
+$Id: ChangeLog,v 1.74 2004/06/08 15:04:24 freckle Exp $
+
+2004-05-21  Matthias Ringwald <mringwal@inf.ethz.ch>
+
+        * include/sys/types.h: changed #include "types_orig.h" to
+        <sys/types_orig.h> to allow this file to be in $MODDIR
 
 2004-06-07  Harald Kipp  <harald.kipp@egnite.de>
 
